<resources>
    <string name="app_name">Inventory App</string>

    <string name="search_button_text">Search</string>

    <string name="fab_content_desc">Add Inventory</string>
    <string name="fab_text">+</string>

    <string name="sale_button_text">Sale!</string>

    <string name="action_delete_all_things">Delete All</string>

    <string name="editor_label_name">Item Name</string>
    <string name="editor_label_quantity">Quantity</string>
    <string name="editor_label_price">Price</string>
    <string name="editor_label_inc_quantity">+</string>
    <string name="editor_label_dec_quantity">-</string>

    <string name="add_item_title">Add an Item</string>
    <string name="edit_item_title">Edit an Item</string>

    <string name="unsaved_changes_dialog_message">You have made unsaved changes.</string>
    <string name="discard">Discard Changes</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="action_save">&#10003;</string>
    <string name="action_delete">Delete</string>
</resources>